# nfl_model_explorer

./: .cursorrules  .gitignore  Introducing Earned Drive Points and Drive Quality model.md  PROJECT.md  Performance_direction.md  README.md  data_loader.py  edp_analysis.py  edp_calculator.py  fixes_report.md  org-task.md  pyproject.toml  requirements.txt  task.md  validation_fix_report.md  visualize.py
docs/: data_requirements.md  performance.md
edp_analysis/: __init__.py  config.py  correlation_analysis.py  data_loader.py  data_pipeline.py  edp_calculator.py  edp_exploration.py  edp_rankings.py  evaluate_predictive_power.py  example_edp_rankings.py  game_prediction.py  main.py  opponent_strength.py  poisson_model.py  ranking.py  requirements.txt  validate_game_predictions.py  validate_opponent_adjustments.py  weekly_predictions.py
knowledge/: Earned Drive Points (EDP) and Drive Quality model.md
model_outputs/: edp_rankings_week14_20241210_023951.xlsx  edp_rankings_week14_20241210_024305.xlsx  edp_rankings_week15_20241213_035233.xlsx  edp_rankings_week15_20241213_035823.xlsx  edp_rankings_week15_20241213_040514.xlsx  edp_rankings_week15_20241216_002752.xlsx  edp_rankings_week15_20241217_024648.xlsx  edp_rankings_week15_20241217_024711.xlsx  edp_rankings_week15_20241217_024738.xlsx  edp_rankings_week15_20241217_025131.xlsx  edp_rankings_week15_20241217_025231.xlsx  edp_rankings_week15_20241217_025308.xlsx  edp_rankings_week15_20241217_025802.xlsx  edp_rankings_week15_20241217_030246.xlsx
outputs/: edp_rankings_week17_20250104_2105.xlsx  (+5 more)
utils/: data_validation.py
(+32 files in other folders)
